--- a/.github/workflows/daily_run.yaml
+++ b/.github/workflows/daily_run.yaml
@@ -20,6 +20,18 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Cache Cargo Registry
+        uses: actions/cache@v3
+        with:
+          path: ~/.cargo/registry
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Cache Cargo Target
+        uses: actions/cache@v3
+        with:
+          path: target
+          key: ${{ runner.os }}-cargo-target-${{ hashFiles('**/Cargo.lock') }}
+          
       - name: Install Nix with Flakes Enabled
         uses: cachix/install-nix-action@v17
         with:
@@ -39,8 +51,8 @@ jobs:
         run: |
           nix develop .#devShells.x86_64-linux.default --command bash -c "
             ./target/release/reddit-badges \
-              --client-id \"$CLIENT_ID\" \
-              --client-secret \"$CLIENT_SECRET\" \
-              --username \"$USERNAME\" \
-              --password \"$PASSWORD\" \
-              --subreddit \"$SUBREDDIT\"
+              --client-id '$CLIENT_ID' \
+              --client-secret '"$CLIENT_SECRET' \
+              --username '$USERNAME' \
+              --password '$PASSWORD' \
+              --subreddit '$SUBREDDIT'
