--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ keywords = ["reddit", "badges", "rust"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/kelvincesar/reddit-badges"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
+documentation = "https://docs.rs/reddit-badges"
 exclude = [
     ".vscode/*",
     "*.nix",
